deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-eks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-eks
  template:
    metadata:
      labels:
        app: my-app-eks
    spec:
      containers:
      - name: my-app-eks
        image: nginx:latest
        ports:
        - containerPort: 80
