service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app-eks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
